src/test/resources/semantic_errors/assign_int_plus_void.notc
void main() {
    int a = main() + 8;
}
